<resources>
    <string name="app_name">Spiders Attend</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>


    <string name="general_photo_chooser_gallery">Gallery</string>
    <string name="general_photo_chooser_title">Upload picture</string>
    <string name="map_fragment_open_gps">Please open Gps</string>
    <string name="map_fragment_yes">Enable Gps</string>
    <string name="map_fragment_no">No Gps</string>
    <string name="general_photo_chooser_camera">Camera</string>
    <string name="general_gallery_chooser_title">Select Picture:</string>
    <string name="send_feed_back">Send Feed Back</string>
    <string name="client_email_feedback_subject">client_feed_back</string>
    <string name="login">Login</string>
    <string name="forgot_password">Forgot password</string>
    <string name="user_name">User name</string>
    <string name="password">Password</string>
    <string name="net_work_error">Network error</string>
    <string name="un_known_error">Unknowen error</string>
    <string name="invalid_user_name">invalid user name</string>
    <string name="invalid_password">Invalid password</string>
    <string name="login_permutation_message">Please allow access permutation to be able to use the app</string>
    <string name="need_location_permation">Need location Permation</string>
    <string name="take_screen_shot">take screen shot</string>
    <string name="mock_location_warrning">Please disable mock Location aps</string>
    <string name="please_disable_mock_location_apps">Please disable mock location running Apps</string>
    <string name="apply">Apply</string>
    <string name="permation_required">Permation required</string>
    <string name="ok">ok</string>


    <!-- Buttons strings -->
    <string name="add_geofences">Add geofences</string>
    <string name="remove_geofences">Remove geofences</string>

    <string name="geofences_added">Geofences added</string>
    <string name="geofences_removed">Geofences removed</string>

    <!-- Error strings -->
    <string name="geofence_not_available">Geofence service is not available now</string>
    <string name="geofence_too_many_geofences">Your app has registered too many geofences</string>
    <string name="geofence_too_many_pending_intents">
        You have provided too many PendingIntents to the addGeofences() call
    </string>
    <string name="unknown_geofence_error">
        Unknown error: the Geofence service is not available now
    </string>
    <string name="geofence_transition_invalid_type">
        Geofence transition error: invalid transition errorType %1$d
    </string>

    <!-- Transition errorType strings -->
    <string name="geofence_transition_entered">Entered</string>
    <string name="geofence_transition_exited">Exited</string>
    <string name="unknown_geofence_transition">Unknown Transition</string>

    <string name="geofence_transition_notification_text">
        Click notification to return to app
    </string>

    <string name="insufficient_permissions">Insufficient permissions.</string>
    <string name="permission_rationale">Location permission is needed for core functionality</string>
    <string name="permission_denied_explanation">Permission was denied, but is needed for core
        functionality.</string>
    <string name="settings">Settings</string>
    <string name="need_camera_permation">please accept camera pertuation in order to use this ap</string>
    <string name="need_location_camera_permation">please provide us with locarion and camera permuation to be able to use this app</string>
    <string name="you_are_out_of_area">you are out of area</string>
    <string name="log_out">Logout</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="please_check_your_internet_conniction">Please check your internet conniction</string>
    <string name="please_enaple_location_provider">Please Enale location provider</string>
    <string name="enable">Enable</string>

    <string name="title_activity_splash_screen">SplashScreenActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="welcome">Welcome</string>
    <string name="by_by">Bye Bye</string>
    <string name="menu_attend_stats">Attend (in / out)</string>
    <string name="menu_vacation">Vacation</string>
    <string name="menu_pay_roll">Payroll</string>
    <string name="qr">Qr</string>
    <string name="local_netWork">Local NetWork\n</string>
    <string name="nfc">NFC\n(coming soon)</string>
    <string name="please_select_attend_type">please select method to </string>
    <string name="attend">Attend</string>
    <string name="out">Leave</string>
    <string name="leave">taken</string>
    <string name="attend_taken">your attend has been taken today</string>
    <string name="wrong_qr">Wrong Qr Code</string>

    <string name="language">Language</string>
    <string name="arabic">Arabic</string>
    <string name="english">English</string>
    <string name="choose_language">Choose Language</string>
    <string name="pending">Pending</string>
    <string name="approved">Approved</string>
    <string name="rejected">Rejected</string>
    <string name="start_date">Start Date :\u0020</string>
    <string name="end_date">End Date :\u0020</string>
    <string name="day">Day</string>
    <string name="days">Days</string>
    <string name="no_approved_vacations">No Approved Vacation yet</string>
    <string name="no_pending_vacations">No pending vacations</string>
    <string name="no_rejected_vacations">No rejected vacation</string>
    <string name="delete">Delete</string>
    <string name="submit">Add vacation</string>
    <string name="vacation_reason">Vacation Reason</string>
    <string name="send">Send</string>
    <string name="choose_manger">Choose  manger</string>
    <string name="select_start_date">Select Start Date</string>
    <string name="select_end_date">Select End date</string>
    <string name="cancel">Cancel</string>
    <string name="choose_vacation_type">Choose vacation type</string>
    <string name="search">Search</string>
    <string name="field_required">required</string>
    <string name="please_choose_manger">Please select manger</string>
    <string name="please_choose_vacation_type">Please choose your vacation type</string>
    <string name="end_data_note">End date should be After Start date</string>
    <string name="vacation_create_succ">Vacation created successfully</string>
    <string name="vacation_create_failed">Failed to create Vacation</string>
    <string name="created_date">Created date</string>
    <string name="total_salary">Total Salery</string>
    <string name="currently_no_pay_roll_available">No Data for you</string>
    <string name="day_in_month">Day in month : </string>
    <string name="work_days">Work days : </string>
    <string name="total_attend_days">Attend days : </string>
    <string name="total_missing_days">Missing days : </string>
    <string name="total_leave_days">Leave days : </string>
    <string name="total_national_days">National days : </string>
    <string name="total_no_show_days">No show days : </string>
    <string name="remaining_leave_days">Remaining leave days : </string>
    <string name="total_late_days">Late days : </string>
    <string name="total_late_hours">Late hours : </string>
    <string name="un_completed_times">Un completed times : </string>
    <string name="benefits_ammount">Benefits amount : </string>
    <string name="deductions_amount">Deductions amount : </string>
    <string name="missing_leave_days">Missing leave days : </string>
    <string name="pay_roll_year">PayRoll year : </string>
    <string name="pay_roll_month">PayRoll month : </string>
    <string name="vacation_manger_request">Vacation reqests</string>
    <string name="reject_reason">Reject reason</string>
    <string name="reason" translatable="false">reason :\u0020 </string>
    <string name="name">Name :\u0020</string>
    <string name="department">Department :\u0020</string>
</resources>
