<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/app_icon"
            android:title="@string/menu_home" />

        <item
            android:id="@+id/nav_attend"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_attend_stats" />
        <item
            android:id="@+id/nav_vacation"
             app:actionLayout="@layout/view_slide_menu_vaction_item"
            android:enabled="false"
           />
        <item
            android:id="@+id/nav_pay_roll"
            app:actionLayout="@layout/view_slide_menu_payroll_item"
            android:enabled="false"/>
        <item
            android:id="@+id/log_out"
            android:icon="@drawable/ic_log_out"
            android:title="@string/log_out" />
     </group>

    <!--<item android:title="Communicate">-->
        <!--<menu>-->
            <!--<item-->
                <!--android:id="@+id/nav_share"-->
                <!--android:icon="@drawable/ic_menu_share"-->
                <!--android:title="@string/menu_share" />-->
            <!--<item-->
                <!--android:id="@+id/nav_send"-->
                <!--android:icon="@drawable/ic_menu_send"-->
                <!--android:title="@string/menu_send" />-->
        <!--</menu>-->
    <!--</item>-->

</menu>
