<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="45dp"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/attend_message_type_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/please_select_attend_type"
                android:textSize="@dimen/title_sub_head"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/attend_message_type"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/title_sub_head"
                android:textStyle="bold"
                tools:text="@string/attend" />

        </LinearLayout>


        <LinearLayout
            android:id="@+id/attend_btn_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:orientation="vertical"
            android:visibility="gone"
            tools:visibility="visible">
            <Button
                android:id="@+id/qr_attend_btn"
                android:layout_width="200dp"
                android:layout_height="100dp"
                android:layout_margin="12dp"
                android:background="@drawable/btn_press_state"
                android:text="@string/qr"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="@dimen/title_sub_head"

                />

            <Button
                android:id="@+id/network_attend_btn"
                android:layout_width="200dp"
                android:layout_height="100dp"
                android:layout_margin="12dp"
                android:background="@drawable/btn_press_state"
                 android:gravity="center"
                android:text="@string/local_netWork"
                android:textAlignment="center"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="@dimen/title_sub_head"


                />



            <Button
                android:layout_width="200dp"
                android:layout_height="100dp"
                android:layout_margin="12dp"
                android:background="@color/gray400"
                android:enabled="false"
                android:gravity="center"
                android:text="@string/nfc"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="@dimen/title_sub_head"
                android:visibility="gone"

                />

        </LinearLayout>
    </LinearLayout>

    <ProgressBar
        android:id="@+id/fragment_attend_progress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="top|center"
        android:layout_marginTop="45dp"
        android:visibility="invisible" />
</FrameLayout>