<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"

    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <LinearLayout xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/widget_padding">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/widget_padding"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/day_in_month"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/days_in_month"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/widget_padding"
                android:layout_marginLeft="@dimen/widget_padding"
                tools:text="value value" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/widget_padding"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/work_days"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/workdays"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/widget_padding"
                android:layout_marginLeft="@dimen/widget_padding"
                tools:text="value value" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/widget_padding"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/total_attend_days"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/emp_total_attend_days"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/widget_padding"
                android:layout_marginLeft="@dimen/widget_padding"
                tools:text="value value" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/widget_padding"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/total_missing_days"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/emp_total_missing_days"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/widget_padding"
                android:layout_marginLeft="@dimen/widget_padding"
                tools:text="value value" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/widget_padding"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/total_leave_days"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/emp_total_leave_days"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/widget_padding"
                android:layout_marginLeft="@dimen/widget_padding"
                tools:text="value value" />

        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/widget_padding"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/total_national_days"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/total_national_holidays"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/widget_padding"
                android:layout_marginLeft="@dimen/widget_padding"
                tools:text="value value" />

        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/widget_padding"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/total_no_show_days"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/emp_noshow_days"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/widget_padding"
                android:layout_marginLeft="@dimen/widget_padding"
                tools:text="value value" />

        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/widget_padding"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/remaining_leave_days"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/emp_remaining_leave_days"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/widget_padding"
                android:layout_marginLeft="@dimen/widget_padding"
                tools:text="value value" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/widget_padding"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/total_late_days"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/emp_total_late_days"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/widget_padding"
                android:layout_marginLeft="@dimen/widget_padding"
                tools:text="value value" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/widget_padding"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/total_late_hours"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/emp_total_late_hours"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/widget_padding"
                android:layout_marginLeft="@dimen/widget_padding"
                tools:text="value value" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/widget_padding"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/total_late_hours"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/emp_total_uncomplate_days"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/widget_padding"
                android:layout_marginLeft="@dimen/widget_padding"
                tools:text="value value" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/widget_padding"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/un_completed_times"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/emp_total_uncomplate_times"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/widget_padding"
                android:layout_marginLeft="@dimen/widget_padding"
                tools:text="value value" />

        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/widget_padding"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/benefits_ammount"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/emp_total_benefits_amount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/widget_padding"
                android:layout_marginLeft="@dimen/widget_padding"
                tools:text="value value" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/widget_padding"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/deductions_amount"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/emp_total_deductions_amount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/widget_padding"
                android:layout_marginLeft="@dimen/widget_padding"
                tools:text="value value" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/widget_padding"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/missing_leave_days"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/emp_total_missing_leave_days"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/widget_padding"
                android:layout_marginLeft="@dimen/widget_padding"
                tools:text="value value" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/widget_padding"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/total_salary"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/total_salary"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/widget_padding"
                android:layout_marginLeft="@dimen/widget_padding"
                tools:text="value value" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/widget_padding"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/pay_roll_year"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/payroll_year"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/widget_padding"
                android:layout_marginLeft="@dimen/widget_padding"
                tools:text="value value" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/widget_padding"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/pay_roll_month"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/payroll_month"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/widget_padding"
                android:layout_marginLeft="@dimen/widget_padding"
                tools:text="value value" />

        </LinearLayout>

    </LinearLayout>

</ScrollView>