<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@drawable/side_nav_bar"
    android:gravity="bottom"
    android:orientation="vertical"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:theme="@style/ThemeOverlay.AppCompat.Dark">


    <androidx.cardview.widget.CardView
        android:layout_width="120dp"
        android:layout_height="120dp"
         android:id="@+id/view2"
        app:cardCornerRadius="40dp"
         android:innerRadius="0dp"
         android:layout_gravity="start"
        android:shape="ring"
        android:thicknessRatio="1.9">
    <ImageView
        android:id="@+id/profile_nav_img"
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:contentDescription="@string/nav_header_desc"
         android:layout_gravity="center"
        android:scaleType="fitCenter"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        tools:srcCompat="@mipmap/ic_launcher_round"
 />

    </androidx.cardview.widget.CardView>
    <TextView
        android:id="@+id/nav_user_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/nav_header_vertical_spacing"
        android:text="@string/nav_header_title"
        android:layout_gravity="start"
        android:textAlignment="viewStart"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1" />

    <TextView
        android:id="@+id/nav_user_mail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:text="@string/nav_header_subtitle" />

</LinearLayout>
